@@ -1,3 +1,10 @@
+2008-12-11  Neal H. Walfield  <neal@gnu.org>
+
+	* headers.m4: Create sysroot/lib/libssp.a and
+	sysroot/lib/libssp-nonshared.a.
+	* stack-protector.c: New file.
+	* Makefile.am (common_sources): Add stack-protector.c.
+
 2008-12-10  Neal H. Walfield  <neal@gnu.org>
 
 	* assert.h (assertx): Replace use of backtrace with
