@@ -1,3 +1,8 @@
+2008-12-11  Neal H. Walfield  <neal@gnu.org>
+
+	* configure.ac (C_CHECKS): Add `-fstack-protector-all' for all
+	runtime check levels except level 0.
+
 2008-12-04  Neal H. Walfield  <neal@gnu.org>
 
 	* configure.ac (USE_L4): AC_DEFINE it.
